--- a/css/_advertising.scss
+++ b/css/_advertising.scss
@@ -1,23 +1,26 @@
 //ADVERTISING
 .img-advertising {
-    display: flex;
-    justify-content: center;
-        display: none;
+  display: flex;
+  justify-content: center;
 
-        @media (min-width: 992px) {
-            display: block;
-            padding-top: 45px;
-            padding-bottom: 40px;
-            padding-right: 30px;
-            padding-left: 30px;
-         }
+  img {
+    display: none;
 
-         @media (min-width: 1200px) {
-            display: block;
-            padding-top: 98px;
-            padding-bottom: 30px;
-            padding-right: 50px;
-            padding-left: 50px;
-
-         }
+    @media (min-width: 992px) {
+      display: block;
+      justify-content: center;
+      padding-top: 45px;
+      padding-bottom: 40px;
+      padding-right: 30px;
+      padding-left: 30px;
     }
+
+    @media (min-width: 1200px) {
+      display: block;
+      padding-top: 98px;
+      padding-bottom: 30px;
+      padding-right: 50px;
+      padding-left: 50px;
+    }
+  }
+}
