--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,185 +1,157 @@
 // HEADER
-
-//function
-// @mixin flexCenter ($direction, $background) {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     flex-direction: $direction;
-//     background: $background;
-// }
-
-
 header {
+  display: flex;
+  background-color: #f0efe9;
+  /* placera headern i mitten */
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+
+  .container {
     display: flex;
-    background-color: #F0EFE9;
-    /* placera headern i mitten */
-    margin-left: auto;
-    margin-right: auto;
-    padding: 15px;
+    align-items: center;
+    justify-content: space-between;
+    gap: 78px;
 
+    .menu-bars {
+      font-size: 25px;
+      border: none;
+      background-color: transparent;
 
-    .container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 78px;
-
-
-        .menu-bars {
-            font-size: 25px;
-            border: none;
-            background-color: transparent;
-
-
-            @media (min-width: 992px) {
-                display: none;
-
-            }
-        }
-
-        .menu {
-            display: none;
-            flex: 1;
-
-
-            @media (min-width: 992px) {
-                display: block;
-            }
-
-
-
-            .top-menu {
-                display: flex;
-                justify-content: flex-end;
-                border-bottom: 1px solid #DAD9D3;
-                align-items: center;
-
-                @media (min-width: 1200px) {
-                    justify-content: space-between;
-                }
-
-
-                .contact-information {
-                    display: none;
-                    padding: 10px;
-                    width: 100%;
-
-                    @media (min-width: 1200px) {
-                        display: flex;
-                    }
-
-                    .content-box {
-                        margin-right: 30px;
-                        padding-right: 25px;
-                        border-right: 1px solid #DAD9D3;
-                        font-family: $font-family-Inter;
-                        font-size: 15px;
-                        font-weight: 300;
-
-                        i {
-                            margin-right: 5px;
-                            font-size: 1.2em;
-                            color: #66666666;
-                        }
-
-                        &.last {
-                            border: none;
-                        }
-                    }
-
-                }
-
-                .social-media {
-                    @media (min-width: 1200px) {
-                        display: flex;
-                    }
-
-                    i {
-                        color: #191919;
-                        font-size: 1.3rem;
-                        margin-left: 10px;
-
-                        &:hover {
-                            color: #666666;
-                        }
-                    }
-                }
-
-            }
-
-            .main-menu {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding-top: 10px;
-                nav{
-                    a{
-                        display: inline-block;
-                        text-decoration: none;
-                        color: $text-color-dark;
-                        margin-right: 35px;
-                        position: relative;
-        
-                        &.active {
-                            font-weight: 500;
-                        }
-        
-                        &.active::after,
-                        &:hover::after {
-                            content: '';
-                            position: absolute;
-                            font-weight: 500;
-                            height: 2px;
-                            width: 15px;
-                            background-color: $btn-black;
-                            left: 50%;
-                            bottom: -3px;
-                            transform: translate((calc(50% - 15px)));
-                        }
-                        
-
-                    }
-                }
-            }      
-
-
-            //___________________________________ nedan kan förmodligen tas bort om menyn fung enl sass-regler ovan
-            // .main-menu>nav>a {
-            //     display: inline-block;
-            //     text-decoration: none;
-            //     color: #191919;
-            //     margin-right: 35px;
-            //     position: relative;
-
-            //     &.active {
-            //         font-weight: 500;
-            //     }
-
-            //     &.active::after,
-            //     &:hover::after {
-            //         content: '';
-            //         position: absolute;
-            //         font-weight: 500;
-            //         height: 2px;
-            //         width: 15px;
-            //         background-color: #191919;
-            //         left: 50%;
-            //         bottom: -3px;
-            //         transform: translate((calc(50% - 15px)));
-            //     }
-            // }
-
-
-
-
-
-            //____________________________________________________
-        }
-        
-        .btn-login {
-            padding-top: 12px;
-            padding-bottom: 12px;
-        }
+      @media (min-width: 992px) {
+        display: none;
+      }
     }
+
+    .menu {
+      display: none;
+      flex: 1;
+
+      @media (min-width: 992px) {
+        display: block;
+      }
+
+      .top-menu {
+        display: flex;
+        justify-content: flex-end;
+        border-bottom: 1px solid #dad9d3;
+        align-items: center;
+
+        @media (min-width: 1200px) {
+          justify-content: space-between;
+        }
+
+        .contact-information {
+          display: none;
+          padding: 10px;
+          width: 100%;
+
+          @media (min-width: 1200px) {
+            display: flex;
+          }
+
+          .content-box {
+            margin-right: 30px;
+            padding-right: 25px;
+            border-right: 1px solid #dad9d3;
+            font-family: $font-family-Inter;
+            font-size: 15px;
+            font-weight: 300;
+
+            i {
+              margin-right: 5px;
+              font-size: 1.2em;
+              color: #66666666;
+            }
+
+            &.last {
+              border: none;
+            }
+          }
+        }
+
+        .social-media {
+          @media (min-width: 1200px) {
+            display: flex;
+          }
+
+          i {
+            color: #191919;
+            font-size: 1.3rem;
+            margin-left: 10px;
+
+            &:hover {
+              color: #666666;
+            }
+          }
+        }
+      }
+
+      .main-menu {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 10px;
+        nav {
+          a {
+            display: inline-block;
+            text-decoration: none;
+            color: $text-color-dark;
+            margin-right: 35px;
+            position: relative;
+
+            &.active {
+              font-weight: 500;
+            }
+
+            &.active::after,
+            &:hover::after {
+              content: "";
+              position: absolute;
+              font-weight: 500;
+              height: 2px;
+              width: 15px;
+              background-color: $btn-black;
+              left: 50%;
+              bottom: -3px;
+              transform: translate((calc(50% - 15px)));
+            }
+          }
+        }
+      }
+
+      //___________________________________ nedan kan förmodligen tas bort om menyn fung enl sass-regler ovan
+      // .main-menu>nav>a {
+      //     display: inline-block;
+      //     text-decoration: none;
+      //     color: #191919;
+      //     margin-right: 35px;
+      //     position: relative;
+
+      //     &.active {
+      //         font-weight: 500;
+      //     }
+
+      //     &.active::after,
+      //     &:hover::after {
+      //         content: '';
+      //         position: absolute;
+      //         font-weight: 500;
+      //         height: 2px;
+      //         width: 15px;
+      //         background-color: #191919;
+      //         left: 50%;
+      //         bottom: -3px;
+      //         transform: translate((calc(50% - 15px)));
+      //     }
+      // }
+
+      //____________________________________________________
+    }
+
+    .btn-login {
+      padding-top: 12px;
+      padding-bottom: 12px;
+    }
+  }
 }
