--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@
 @media (min-width: 992px) {
   .img-advertising img {
     display: block;
+    justify-content: center;
     padding-top: 45px;
     padding-bottom: 40px;
     padding-right: 30px;
@@ -227,61 +228,258 @@
   }
 }
 
+/* Grundläggande stil för mobila enheter (mindre än 1200px bredd) */
+.container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 40px;
+}
+
+.about {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.founder {
+  text-align: center;
+}
+
+/* Stilar för skärmar med en bredd på 1200px eller mer */
+@media (min-width: 1200px) {
+  .container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+  }
+  .about {
+    flex-direction: row;
+  }
+  .founder {
+    text-align: left;
+    flex: 1; /* Ta upp 1/3 av utrymmet */
+  }
+  .content {
+    flex: 2; /* Ta upp 2/3 av utrymmet */
+    margin-left: 20px; /* Lägg till marginal mellan .founder och .content */
+    max-width: 50%; /* Sätt en maxbredd om det behövs */
+  }
+}
+@media (min-width: 1200px) and (min-width: 1200px) {
+  .content .content {
+    flex: 1; /* Ändra detta värde beroende på önskad storlek */
+    max-width: 40%; /* Sätt en maxbredd om det behövs */
+    margin-left: 20px; /* Lägg till margin om du vill ha avstånd mellan .founder och .content */
+  }
+}
+/*// ABOUT
 .about {
   display: flex;
   flex-direction: column-reverse;
   text-align: center;
   padding: 40px 40px;
   align-items: center;
-}
-@media (min-width: 1200px) {
-  .about {
+  // margin-left: -20px; flytta hela sektionen aningen åt vänster
+
+  @media (min-width: 1200px) {
     display: flex;
     flex-direction: row;
     text-align: left;
     border: 1px solid black;
-    padding: 60px;
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+
+  .founder {
+    margin-top: 60px;
+
+    @media (min-width: 1200px) {
+      text-align: left;
+    }
+    text-align: center;
+    img {
+      width: 70%;
+
+      @media (min-width: 1200px) {
+        width: 150%;
+        padding: 40px 40px;
+      }
+      // .background-frame {
+      //     @media (min-width:1200px) {
+      //         background-color: aqua;
+      //         border: 1px solid black;
+      //       }
+      // }
+    }
+    p {
+      font-family: $font-family-DM;
+      display: inline-block;
+      background-color: #beebff;
+      width: 70%;
+      padding: 10px;
+
+      span {
+        color: #f94d1c;
+        font-weight: 700;
+      }
+
+      @media (min-width: 1200px) {
+        position: relative;
+        bottom: 187px;
+        left: -12px;
+        background-color: #beebff;
+        padding: 13px 11px;
+        width: 90%;
+      }
+    }
+  }
+  .content {
+    margin-left: 20px;
+    h2 {
+    }
+    h3 {
+    }
+    p {
+      //   max-width: 90%;
+    }
+    a {
+      i {
+        margin-top: 10px;
+        margin-left: 10px;
+      }
+    }
+
+    .btn-video {
+      margin-left: 10px;
+      i {
+        margin: 0;
+      }
+    }
+
+    @media (min-width: 1200px) {
+      align-self: flex-start;
+      padding: 40px 40px;
+      margin-left: 90px;
+    }
   }
 }
-.about .founder {
-  text-align: center;
+*/
+header {
+  display: flex;
+  background-color: #f0efe9;
+  /* placera headern i mitten */
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+}
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 78px;
+}
+header .container .menu-bars {
+  font-size: 25px;
+  border: none;
+  background-color: transparent;
+}
+@media (min-width: 992px) {
+  header .container .menu-bars {
+    display: none;
+  }
+}
+header .container .menu {
+  display: none;
+  flex: 1;
+}
+@media (min-width: 992px) {
+  header .container .menu {
+    display: block;
+  }
+}
+header .container .menu .top-menu {
+  display: flex;
+  justify-content: flex-end;
+  border-bottom: 1px solid #dad9d3;
+  align-items: center;
 }
 @media (min-width: 1200px) {
-  .about .founder {
-    text-align: left;
+  header .container .menu .top-menu {
+    justify-content: space-between;
   }
 }
-.about .founder img {
-  width: 50%;
+header .container .menu .top-menu .contact-information {
+  display: none;
+  padding: 10px;
+  width: 100%;
 }
 @media (min-width: 1200px) {
-  .about .founder img {
-    width: 100%;
-    margin-top: 30px;
+  header .container .menu .top-menu .contact-information {
+    display: flex;
   }
 }
-.about .founder p {
-  font-family: "DM Sans", sans-serif;
+header .container .menu .top-menu .contact-information .content-box {
+  margin-right: 30px;
+  padding-right: 25px;
+  border-right: 1px solid #dad9d3;
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+}
+header .container .menu .top-menu .contact-information .content-box i {
+  margin-right: 5px;
+  font-size: 1.2em;
+  color: rgba(102, 102, 102, 0.4);
+}
+header .container .menu .top-menu .contact-information .content-box.last {
+  border: none;
 }
 @media (min-width: 1200px) {
-  .about .founder p {
-    position: relative;
-    bottom: 170px;
-    left: -144px;
-    background-color: #BEEBFF;
-    padding: 30px 20px;
-    width: 90%;
+  header .container .menu .top-menu .social-media {
+    display: flex;
   }
 }
-.about .founder p span {
-  color: #F94D1C;
-  font-weight: 700;
+header .container .menu .top-menu .social-media i {
+  color: #191919;
+  font-size: 1.3rem;
+  margin-left: 10px;
 }
-@media (min-width: 1200px) {
-  .about .content {
-    align-self: flex-start;
-  }
+header .container .menu .top-menu .social-media i:hover {
+  color: #666666;
 }
+header .container .menu .main-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+}
+header .container .menu .main-menu nav a {
+  display: inline-block;
+  text-decoration: none;
+  color: #191919;
+  margin-right: 35px;
+  position: relative;
+}
+header .container .menu .main-menu nav a.active {
+  font-weight: 500;
+}
+header .container .menu .main-menu nav a.active::after, header .container .menu .main-menu nav a:hover::after {
+  content: "";
+  position: absolute;
+  font-weight: 500;
+  height: 2px;
+  width: 15px;
+  background-color: #191919;
+  left: 50%;
+  bottom: -3px;
+  transform: translate(calc(50% - 15px));
+}
+header .container .btn-login {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -296,7 +494,7 @@ body {
 }
 
 .heading-red {
-  color: #F94D1C;
+  color: #f94d1c;
   font-size: 18px;
   font-family: "Inter", sans-serif;
   margin-bottom: 30px;
@@ -358,7 +556,7 @@ h3 {
 
 .btn-black {
   background-color: #191919;
-  color: #F0EFE9;
+  color: #f0efe9;
   border-color: 1px solid #F9D783;
   border-radius: 25px;
   padding: 12px 25px;
