--- a/css/style.scss
+++ b/css/style.scss
@@ -1,110 +1,103 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&family=Hanken+Grotesk:wght@200;300;400;500;600&display=swap');
-@import './header';
-@import './variables';
-@import './showcase';
-@import './advertising';
-@import './features';
-@import './about';
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&family=Hanken+Grotesk:wght@200;300;400;500;600&display=swap");
+@import "./variables";
+@import "./showcase";
+@import "./advertising";
+@import "./features";
+@import "./about";
+@import "./header";
 
 * {
-    box-sizing: border-box; // tar med border i beräkning vid sättning av storlek (borderna tar alltså inte upp 2 px extra p detta sätt)
+  box-sizing: border-box; // tar med border i beräkning vid sättning av storlek (borderna tar alltså inte upp 2 px extra p detta sätt)
 }
-
 
 html,
 body {
-    color: #191919;
-    font-family: $font-family-Inter;
-    font-size: 16px;
-    font-weight: 400;
-    margin: 0; 
-    // background-color: #F0EFE9;
+  color: #191919;
+  font-family: $font-family-Inter;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0;
+  // background-color: #F0EFE9;
 }
 
 .heading-red {
-    color: #F94D1C;
-    font-size: 18px;
-    font-family: $font-family-Inter;
-    margin-bottom: 30px;
-    margin-top: 30px;
+  color: #f94d1c;
+  font-size: 18px;
+  font-family: $font-family-Inter;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 h3 {
-    color: #191919;
-    font-family: $font-family-DM;
-    font-size: 28px;
-    font-weight: 700;
-    margin-bottom: 30px;
+  color: #191919;
+  font-family: $font-family-DM;
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 30px;
 
-    @media (min-width: 768px) {
-        font-size: 45px;                   
-    }
-} 
+  @media (min-width: 768px) {
+    font-size: 45px;
+  }
+}
 
 .btn-yellow {
-    background-color: $btn-yellow;
-    color: $text-color-dark;
-    border-color: 1px solid $btn-yellow;
-    border-radius: 25px;
-    padding: 12px 25px;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 16px;
-    i {
-        margin-left: 7px;
-        font-size: 0.9em;
-    }
-    &:hover {
-        background-color: $btn-black;
-        border: 10 px solid $btn-black;
-        color: $text-color-light;
-    }
+  background-color: $btn-yellow;
+  color: $text-color-dark;
+  border-color: 1px solid $btn-yellow;
+  border-radius: 25px;
+  padding: 12px 25px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  i {
+    margin-left: 7px;
+    font-size: 0.9em;
+  }
+  &:hover {
+    background-color: $btn-black;
+    border: 10 px solid $btn-black;
+    color: $text-color-light;
+  }
 }
 
 .btn-transparent {
-    background-color: $btn-transparent;
-    color: $text-color-dark;
-    border: 1px solid $btn-black;
-    border-radius: 25px;
-    padding: 12px 25px;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 16px;
-    // border: 1px solid #191919;
-    i {
-        margin-left: 7px;
-        font-size: 0.9em;
-    }
-    &:hover {
-        background-color: $btn-black;
-        border: 10 px solid $btn-black;
-        color: $text-color-light;
-    }
+  background-color: $btn-transparent;
+  color: $text-color-dark;
+  border: 1px solid $btn-black;
+  border-radius: 25px;
+  padding: 12px 25px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  // border: 1px solid #191919;
+  i {
+    margin-left: 7px;
+    font-size: 0.9em;
+  }
+  &:hover {
+    background-color: $btn-black;
+    border: 10 px solid $btn-black;
+    color: $text-color-light;
+  }
 }
 
 .btn-black {
-    background-color: $btn-black;
-    color: #F0EFE9;
-    border-color: 1px solid $btn-yellow;
-    border-radius: 25px;
-    padding: 12px 25px;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 16px;
-    i {
-        // margin-left: 7px;
-        font-size: 0.9em;
-    }
-    &:hover {
-        background-color: $btn-yellow;
-        border: 10 px solid $btn-yellow;
-        color:  $text-color-dark;
-    }
+  background-color: $btn-black;
+  color: #f0efe9;
+  border-color: 1px solid $btn-yellow;
+  border-radius: 25px;
+  padding: 12px 25px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  i {
+    // margin-left: 7px;
+    font-size: 0.9em;
+  }
+  &:hover {
+    background-color: $btn-yellow;
+    border: 10 px solid $btn-yellow;
+    color: $text-color-dark;
+  }
 }
-
-
-
-
-
-
