--- a/css/_about.scss
+++ b/css/_about.scss
@@ -1,47 +1,106 @@
 /* Grundläggande stil för mobila enheter (mindre än 1200px bredd) */
-.container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 40px;
-}
-
 .about {
   display: flex;
-  flex-direction: column-reverse;
-}
-
-.founder {
+  flex-direction: row;
   text-align: center;
-}
+  padding: 40px;
 
-/* Stilar för skärmar med en bredd på 1200px eller mer */
-@media (min-width: 1200px) {
   .container {
-    flex-direction: row;
+    display: flex;
+    flex-direction: column-reverse;
     align-items: center;
-    justify-content: space-between;
-    text-align: left;
-  }
 
-  .about {
-    flex-direction: row;
-  }
-
-  .founder {
-    text-align: left;
-    flex: 1; /* Ta upp 1/3 av utrymmet */
-  }
-
-  .content {
-    flex: 2; /* Ta upp 2/3 av utrymmet */
-    margin-left: 20px; /* Lägg till marginal mellan .founder och .content */
-    max-width: 50%; /* Sätt en maxbredd om det behövs */
+    /* Stilar för skärmar med en bredd på 1200px eller mer */
     @media (min-width: 1200px) {
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-between;
+      text-align: left;
+    }
+
+    .founder {
+      text-align: center;
+      // flex: 1;
+
+      @media (min-width: 1200px) {
+        text-align: left;
+      }
+
+      img {
+        width: 70%;
+        margin-top: 60px;
+        text-align: center;
+
+        @media (min-width: 1200px) {
+          width: 100%;
+          margin-top: 30px;
+        }
+      }
+      .background-frame {
+        @media (min-width: 1200px) {
+        }
+
+        p {
+          font-family: $font-family-DM;
+          display: inline-block;
+          background-color: #beebff;
+          width: 70%;
+          padding: 10px;
+
+          span {
+            color: #f94d1c;
+            font-weight: 700;
+          }
+
+          @media (min-width: 1200px) {
+            position: relative;
+            bottom: 177px;
+            left: -49px;
+            background-color: #beebff;
+            width: 70%;
+            padding: 14px 23px;
+          }
+        }
+      }
       .content {
-        flex: 1; /* Ändra detta värde beroende på önskad storlek */
-        max-width: 40%; /* Sätt en maxbredd om det behövs */
-        margin-left: 20px; /* Lägg till margin om du vill ha avstånd mellan .founder och .content */
+        margin-left: 20px; /* Lägg till marginal mellan .founder och .content */
+
+
+        p {
+          @media (min-width: 1200px) {
+            // margin-bottom: 70px;
+            margin-left: 49px;
+            width: 69%;
+            padding: 60px 114px;
+            line-height: 2rem;
+          }
+        }
+        .btn-black {
+          i {
+            margin-left: 10px;
+            @media (min-width: 1200px) {
+              margin-left: 10px;
+            }
+          }
+          @media (min-width: 1200px) {
+            margin-right: 35px;
+          }
+        }
+        
+        
+        .btn-circle {
+          margin-left: 20px;
+         
+          
+          i {
+            margin-left: 10px;
+          }
+
+          @media (min-width: 1200px) {
+          }
+
+        }
+
       }
     }
   }
