--- a/css/style.css
+++ b/css/style.css
@@ -124,16 +124,17 @@
     text-align: left;
     line-height: 1.2;
     align-items: flex-start;
+    margin-right: 100px;
   }
 }
-.features .container .content h2 {
+.features .container h2 {
   color: #F94D1C;
   font-size: 18px;
   font-family: "Inter", sans-serif;
   margin-bottom: 30px;
   margin-top: 30px;
 }
-.features .container .content h3 {
+.features .container h3 {
   color: #191919;
   font-family: "DM Sans", sans-serif;
   font-size: 28px;
@@ -141,28 +142,28 @@
   margin-bottom: 30px;
 }
 @media (min-width: 768px) {
-  .features .container .content h3 {
+  .features .container h3 {
     font-size: 45px;
   }
 }
 @media (min-width: 1200px) {
-  .features .container .content h3 {
+  .features .container h3 {
     max-width: 90%;
   }
 }
-.features .container .content a {
+.features .container a {
   margin-right: 40px;
   margin-left: 40px;
   display: block;
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  .features .container .content a {
+  .features .container a {
     display: inline-block;
   }
 }
 @media (min-width: 1200px) {
-  .features .container .content a {
+  .features .container a {
     display: block; /* Gör länken till en blocknivå-element */
     width: 100%; /* Ta upp hela bredden av föräldern */
     margin: 0; /* Ta bort marginaler */
@@ -229,49 +230,95 @@
 }
 
 /* Grundläggande stil för mobila enheter (mindre än 1200px bredd) */
-.container {
+.about {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   text-align: center;
   padding: 40px;
 }
-
-.about {
+.about .container {
   display: flex;
   flex-direction: column-reverse;
+  align-items: center;
+  /* Stilar för skärmar med en bredd på 1200px eller mer */
 }
-
-.founder {
-  text-align: center;
-}
-
-/* Stilar för skärmar med en bredd på 1200px eller mer */
 @media (min-width: 1200px) {
-  .container {
+  .about .container {
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     text-align: left;
   }
-  .about {
-    flex-direction: row;
-  }
-  .founder {
+}
+.about .container .founder {
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .about .container .founder {
     text-align: left;
-    flex: 1; /* Ta upp 1/3 av utrymmet */
-  }
-  .content {
-    flex: 2; /* Ta upp 2/3 av utrymmet */
-    margin-left: 20px; /* Lägg till marginal mellan .founder och .content */
-    max-width: 50%; /* Sätt en maxbredd om det behövs */
   }
 }
-@media (min-width: 1200px) and (min-width: 1200px) {
-  .content .content {
-    flex: 1; /* Ändra detta värde beroende på önskad storlek */
-    max-width: 40%; /* Sätt en maxbredd om det behövs */
-    margin-left: 20px; /* Lägg till margin om du vill ha avstånd mellan .founder och .content */
+.about .container .founder img {
+  width: 70%;
+  margin-top: 60px;
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .about .container .founder img {
+    width: 100%;
+    margin-top: 30px;
   }
+}
+.about .container .founder .background-frame p {
+  font-family: "DM Sans", sans-serif;
+  display: inline-block;
+  background-color: #beebff;
+  width: 70%;
+  padding: 10px;
+}
+.about .container .founder .background-frame p span {
+  color: #f94d1c;
+  font-weight: 700;
+}
+@media (min-width: 1200px) {
+  .about .container .founder .background-frame p {
+    position: relative;
+    bottom: 177px;
+    left: -49px;
+    background-color: #beebff;
+    width: 70%;
+    padding: 14px 23px;
+  }
+}
+.about .container .founder .content {
+  margin-left: 20px; /* Lägg till marginal mellan .founder och .content */
+}
+@media (min-width: 1200px) {
+  .about .container .founder .content p {
+    margin-left: 49px;
+    width: 69%;
+    padding: 60px 114px;
+    line-height: 2rem;
+  }
+}
+.about .container .founder .content .btn-black i {
+  margin-left: 10px;
+}
+@media (min-width: 1200px) {
+  .about .container .founder .content .btn-black i {
+    margin-left: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .about .container .founder .content .btn-black {
+    margin-right: 35px;
+  }
+}
+.about .container .founder .content .btn-circle {
+  margin-left: 20px;
+}
+.about .container .founder .content .btn-circle i {
+  margin-left: 10px;
 }
 /*// ABOUT
 .about {
@@ -480,6 +527,33 @@ header .container .btn-login {
   padding-bottom: 12px;
 }
 
+.services {
+  padding: 40px;
+  background-color: #F0EFE9;
+}
+.services .container {
+  text-align: center;
+}
+.services .container .content {
+  display: grid;
+  grid-row-gap: 30px;
+}
+.services .container .content .box {
+  background-color: #FFFFFF;
+  padding: 30px;
+}
+.services .container .content .box a {
+  background-color: #191919;
+  color: #F0EFE9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 26px 28px;
+}
+.services .container .content .box a i {
+  font-size: 22px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -501,6 +575,12 @@ body {
   margin-top: 30px;
 }
 
+h2 {
+  color: #F94D1C;
+  font-size: 18px;
+  font-family: "Inter", sans-serif;
+}
+
 h3 {
   color: #191919;
   font-family: "DM Sans", sans-serif;
@@ -512,6 +592,12 @@ h3 {
   h3 {
     font-size: 45px;
   }
+}
+
+h4 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 22px;
 }
 
 .btn-yellow {
@@ -571,4 +657,17 @@ h3 {
   background-color: #F9D783;
   border: 10 px solid #F9D783;
   color: #191919;
+}
+
+.btn-circle {
+  background-color: transparent;
+  color: #191919;
+  border: 1px solid #191919;
+  border-radius: 50%;
+  padding: 11px 17px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  width: 50px; /* Ange den önskade bredden här */
+  height: 50px;
 }
