--- a/css/style.css
+++ b/css/style.css
@@ -534,15 +534,61 @@ header .container .btn-login {
 .services .container {
   text-align: center;
 }
-.services .container .content {
+@media (min-width: 1200px) {
+  .services .container .head-lines {
+    text-align: left;
+  }
+}
+.services .content {
   display: grid;
   grid-row-gap: 30px;
 }
-.services .container .content .box {
+.services .content .box {
+  height: -moz-fit-content;
+  height: fit-content;
   background-color: #FFFFFF;
   padding: 30px;
 }
-.services .container .content .box a {
+.services .content .box span {
+  border-top: 1px solid black;
+  width: 40px;
+  grid-row: 1/3;
+  grid-column: 1/3;
+  margin-top: 20px;
+}
+@media (min-width: 768px) {
+  .services .content .box span {
+    margin-top: 20px;
+  }
+}
+.services .content .box h4 {
+  padding-top: 40px;
+}
+@media (min-width: 768px) {
+  .services .content .box h4 {
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+}
+@media (min-width: 1200px) {
+  .services .content .box h4 {
+    grid-column: 1/5;
+    grid-row: 2/2;
+  }
+}
+@media (min-width: 768px) {
+  .services .content .box p {
+    grid-row: 2/2;
+    grid-column: 1/4;
+  }
+}
+@media (min-width: 1200px) {
+  .services .content .box p {
+    grid-column: 1/5;
+    grid-row: 3/3;
+  }
+}
+.services .content .box a {
   background-color: #191919;
   color: #F0EFE9;
   display: flex;
@@ -550,10 +596,45 @@ header .container .btn-login {
   justify-content: center;
   padding: 26px 28px;
 }
-.services .container .content .box a i {
+.services .content .box a i {
   font-size: 22px;
 }
+@media (min-width: 768px) {
+  .services .content .box a {
+    grid-row: 3/3;
+    grid-column: 4/5;
+  }
+}
+@media (min-width: 1200px) {
+  .services .content .box a {
+    grid-column: 4/5;
+    grid-row: 4/4;
+  }
+}
+@media (min-width: 768px) {
+  .services .content .box {
+    display: grid;
+  }
+}
+@media (min-width: 768px) {
+  .services .content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    grid-column-gap: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .services .content {
+    grid-template-columns: 25% 25% 25% 25%;
+    text-align: left;
+  }
+}
 
+/*
+
+
+*/
 * {
   box-sizing: border-box;
 }
