--- a/css/_services.scss
+++ b/css/_services.scss
@@ -1,110 +1,103 @@
 .services {
   padding: 40px;
-
   background-color: #f0efe9;
 
   .container {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    .head-lines {
+
+    .headlines {
       @media (min-width: 1200px) {
         text-align: left;
       }
-      h2 {
-      }
-      h3 {
-        @media (min-width: 1200px) {
-          // width: 43%;
-        }
-      }
     }
-    @media (min-width: 1200px) {
-      margin-left: 150px;
-      margin-right: 150px;
-    }
-  }
-  .content {
-    display: grid;
-    grid-row-gap: 30px;
-    .box {
-      height: fit-content;
 
-      span {
-        border-top: 1px solid black;
-        width: 40px;
-        grid-row: 1/3;
-        grid-column: 1/3;
-        margin-top: 20px;
-        @media (min-width: 768px) {
+    .content {
+      display: grid;
+      grid-row-gap: 30px;
+      margin-bottom: 50px;
+
+      .box {
+        height: fit-content;
+        background-color: #ffffff;
+        padding: 30px;
+
+        span {
+          border-top: 1px solid black;
+          width: 40px;
+          grid-row: 1/3;
+          grid-column: 1/3;
           margin-top: 20px;
-        }
-      }
-      background-color: #ffffff;
-      padding: 30px;
 
-      h4 {
-        padding-top: 40px;
+          @media (min-width: 768px) {
+            margin-top: 20px;
+          }
+        }
+        h4 {
+          padding-top: 40px;
+          @media (min-width: 768px) {
+            grid-row: 1/2;
+            grid-column: 1/5;
+          }
+          @media (min-width: 1200px) {
+            grid-column: 1/5;
+            grid-row: 2/2;
+          }
+        }
+        p {
+          @media (min-width: 768px) {
+            grid-row: 2/2;
+            grid-column: 1/5;
+          }
+          @media (min-width: 1200px) {
+            grid-column: 1/5;
+            grid-row: 3/3;
+          }
+        }
+        a {
+          background-color: #191919;
+          color: $text-color-light;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 26px 28px;
+
+          i {
+            font-size: 22px;
+          }
+          @media (min-width: 768px) {
+            grid-row: 3/3;
+            grid-column: 4/5;
+          }
+          @media (min-width: 1200px) {
+            grid-column: 4/5;
+            grid-row: 4/4;
+          }
+        }
         @media (min-width: 768px) {
-          grid-row: 1/2;
-          grid-column: 1/5;
-        }
-        @media (min-width: 1200px) {
-          grid-column: 1/5;
-          grid-row: 2/2;
-        }
-      }
-      p {
-        @media (min-width: 768px) {
-          grid-row: 2/2;
-          grid-column: 1/5;
-        }
-        @media (min-width: 1200px) {
-          grid-column: 1/5;
-          grid-row: 3/3;
-        }
-      }
-      a {
-        background-color: #191919;
-        color: $text-color-light;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 26px 28px;
-        i {
-          font-size: 22px;
-          // text-align: center;
-        }
-        @media (min-width: 768px) {
-          grid-row: 3/3;
-          grid-column: 4/5;
-        }
-        @media (min-width: 1200px) {
-          grid-column: 4/5;
-          grid-row: 4/4;
+          display: grid;
         }
       }
       @media (min-width: 768px) {
         display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50% 50%;
+        grid-column-gap: 30px;
+      }
+      @media (min-width: 1200px) {
+        grid-template-columns: 25% 25% 25% 25%;
+        text-align: left;
+        margin-right: 70px;
       }
     }
-    @media (min-width: 768px) {
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-template-rows: 50% 50%;
-      grid-column-gap: 30px;
-    }
     @media (min-width: 1200px) {
-      grid-template-columns: 25% 25% 25% 25%;
-      // grid-template-rows: 25% 25% 25% 25%;
-      // height: 180%;
-      text-align: left;
-    }
-    @media (min-width: 1200px) {
-      margin-right: 70px;
+      margin: 0 auto;
     }
   }
 }
 
-/*
-
-
-*/
+.container > a {
+  margin-top: 30px;
+  margin: 0 auto;
+}
