--- a/css/style.css
+++ b/css/style.css
@@ -529,27 +529,30 @@ header .container .btn-login {
 
 .services {
   padding: 40px;
-  background-color: #F0EFE9;
+  background-color: #f0efe9;
 }
 .services .container {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 @media (min-width: 1200px) {
-  .services .container .head-lines {
+  .services .container .headlines {
     text-align: left;
   }
 }
-.services .content {
+.services .container .content {
   display: grid;
   grid-row-gap: 30px;
+  margin-bottom: 50px;
 }
-.services .content .box {
+.services .container .content .box {
   height: -moz-fit-content;
   height: fit-content;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 30px;
 }
-.services .content .box span {
+.services .container .content .box span {
   border-top: 1px solid black;
   width: 40px;
   grid-row: 1/3;
@@ -557,38 +560,38 @@ header .container .btn-login {
   margin-top: 20px;
 }
 @media (min-width: 768px) {
-  .services .content .box span {
+  .services .container .content .box span {
     margin-top: 20px;
   }
 }
-.services .content .box h4 {
+.services .container .content .box h4 {
   padding-top: 40px;
 }
 @media (min-width: 768px) {
-  .services .content .box h4 {
+  .services .container .content .box h4 {
     grid-row: 1/2;
-    grid-column: 1/4;
+    grid-column: 1/5;
   }
 }
 @media (min-width: 1200px) {
-  .services .content .box h4 {
+  .services .container .content .box h4 {
     grid-column: 1/5;
     grid-row: 2/2;
   }
 }
 @media (min-width: 768px) {
-  .services .content .box p {
+  .services .container .content .box p {
     grid-row: 2/2;
-    grid-column: 1/4;
+    grid-column: 1/5;
   }
 }
 @media (min-width: 1200px) {
-  .services .content .box p {
+  .services .container .content .box p {
     grid-column: 1/5;
     grid-row: 3/3;
   }
 }
-.services .content .box a {
+.services .container .content .box a {
   background-color: #191919;
   color: #F0EFE9;
   display: flex;
@@ -596,28 +599,28 @@ header .container .btn-login {
   justify-content: center;
   padding: 26px 28px;
 }
-.services .content .box a i {
+.services .container .content .box a i {
   font-size: 22px;
 }
 @media (min-width: 768px) {
-  .services .content .box a {
+  .services .container .content .box a {
     grid-row: 3/3;
     grid-column: 4/5;
   }
 }
 @media (min-width: 1200px) {
-  .services .content .box a {
+  .services .container .content .box a {
     grid-column: 4/5;
     grid-row: 4/4;
   }
 }
 @media (min-width: 768px) {
-  .services .content .box {
+  .services .container .content .box {
     display: grid;
   }
 }
 @media (min-width: 768px) {
-  .services .content {
+  .services .container .content {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
@@ -625,16 +628,91 @@ header .container .btn-login {
   }
 }
 @media (min-width: 1200px) {
-  .services .content {
+  .services .container .content {
     grid-template-columns: 25% 25% 25% 25%;
     text-align: left;
+    margin-right: 70px;
+  }
+}
+@media (min-width: 1200px) {
+  .services .container {
+    margin: 0 auto;
   }
 }
 
-/*
+.container > a {
+  margin-top: 30px;
+  margin: 0 auto;
+}
 
+@media (min-width: 1200px) {
+  .choose-us .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-gap: 20px;
+  }
+}
+.choose-us .content {
+  grid-column: span 2;
+  text-align: center;
+}
+.choose-us .content .headlines {
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .choose-us .content .headlines {
+    text-align: left;
+  }
+}
+@media (min-width: 1200px) {
+  .choose-us .content .box {
+    display: grid;
+    grid-template-columns: auto 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
+.choose-us .content .box a {
+  margin-right: 30px;
+  margin-top: 10px;
+  grid-row: 1/4;
+  grid-column: 1/1;
+}
+.choose-us .content .box a img {
+  border-radius: 50%;
+  border: 1px solid #e7e7e7;
+  padding: 10px;
+}
+.choose-us .content .box h4 {
+  grid-row: 1;
+  grid-column: 2/2;
+  text-align: start;
+}
+.choose-us .content .box p {
+  grid-row: 2/3;
+  grid-column: 1/4;
+}
+@media (min-width: 1200px) {
+  .choose-us .content .box p {
+    margin-left: -65px;
+    margin-top: -2px;
+  }
+}
 
-*/
+.main-img {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+@media (min-width: 1200px) {
+  .main-img {
+    width: 210%;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-left: 50px;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -660,6 +738,7 @@ h2 {
   color: #F94D1C;
   font-size: 18px;
   font-family: "Inter", sans-serif;
+  text-transform: capitalize;
 }
 
 h3 {
@@ -668,6 +747,7 @@ h3 {
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 30px;
+  text-transform: capitalize;
 }
 @media (min-width: 768px) {
   h3 {
@@ -679,6 +759,7 @@ h4 {
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
   font-size: 22px;
+  text-transform: capitalize;
 }
 
 .btn-yellow {
