--- a/css/style.css
+++ b/css/style.css
@@ -230,15 +230,10 @@
 }
 
 /* Grundläggande stil för mobila enheter (mindre än 1200px bredd) */
-.about {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  padding: 40px;
-}
 .about .container {
   display: flex;
   flex-direction: column-reverse;
+  text-align: center;
   align-items: center;
   /* Stilar för skärmar med en bredd på 1200px eller mer */
 }
@@ -246,34 +241,79 @@
   .about .container {
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-between;
     text-align: left;
+    gap: 30px;
   }
 }
-.about .container .founder {
-  text-align: center;
+.about .container .content {
+  margin-bottom: 30px;
 }
 @media (min-width: 1200px) {
-  .about .container .founder {
-    text-align: left;
+  .about .container .content h2 {
+    margin-bottom: 50px;
+  }
+}
+.about .container .content h3 {
+  margin-bottom: 50px;
+}
+@media (min-width: 1200px) {
+  .about .container .content h3 {
+    margin-bottom: 45px;
+  }
+}
+.about .container .content .p-last {
+  margin-bottom: 50px;
+}
+@media (min-width: 1200px) {
+  .about .container .content .p-last {
+    margin-bottom: 80px;
+    margin-top: 50px;
+  }
+}
+.about .container .content p {
+  padding: 20px;
+}
+@media (min-width: 1200px) {
+  .about .container .content p {
+    padding: 10px;
+  }
+}
+.about .container .content .btn-black i {
+  margin-left: 10px;
+}
+@media (min-width: 1200px) {
+  .about .container .content .btn-black {
+    margin-right: 44px;
+  }
+}
+@media (min-width: 1200px) {
+  .about .container .content {
+    margin-left: 95px;
   }
 }
 .about .container .founder img {
-  width: 70%;
-  margin-top: 60px;
+  margin-top: 30px;
   text-align: center;
+  display: none;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .about .container .founder img {
-    width: 100%;
-    margin-top: 30px;
+    display: block;
+  }
+}
+.about .container .founder .background-frame {
+  display: none;
+}
+@media (min-width: 768px) {
+  .about .container .founder .background-frame {
+    display: block;
   }
 }
 .about .container .founder .background-frame p {
   font-family: "DM Sans", sans-serif;
   display: inline-block;
   background-color: #beebff;
-  width: 70%;
+  width: 100%;
   padding: 10px;
 }
 .about .container .founder .background-frame p span {
@@ -283,135 +323,20 @@
 @media (min-width: 1200px) {
   .about .container .founder .background-frame p {
     position: relative;
-    bottom: 177px;
-    left: -49px;
+    bottom: 220px;
+    left: -60px;
     background-color: #beebff;
     width: 70%;
-    padding: 14px 23px;
-  }
-}
-.about .container .founder .content {
-  margin-left: 20px; /* Lägg till marginal mellan .founder och .content */
-}
-@media (min-width: 1200px) {
-  .about .container .founder .content p {
-    margin-left: 49px;
-    width: 69%;
-    padding: 60px 114px;
-    line-height: 2rem;
-  }
-}
-.about .container .founder .content .btn-black i {
-  margin-left: 10px;
-}
-@media (min-width: 1200px) {
-  .about .container .founder .content .btn-black i {
-    margin-left: 10px;
+    padding: 40px 30px 40px 30px;
   }
 }
 @media (min-width: 1200px) {
-  .about .container .founder .content .btn-black {
-    margin-right: 35px;
-  }
-}
-.about .container .founder .content .btn-circle {
-  margin-left: 20px;
-}
-.about .container .founder .content .btn-circle i {
-  margin-left: 10px;
-}
-/*// ABOUT
-.about {
-  display: flex;
-  flex-direction: column-reverse;
-  text-align: center;
-  padding: 40px 40px;
-  align-items: center;
-  // margin-left: -20px; flytta hela sektionen aningen åt vänster
-
-  @media (min-width: 1200px) {
-    display: flex;
-    flex-direction: row;
+  .about .container .founder {
     text-align: left;
-    border: 1px solid black;
-    padding-right: 100px;
-    padding-left: 100px;
-  }
-
-  .founder {
-    margin-top: 60px;
-
-    @media (min-width: 1200px) {
-      text-align: left;
-    }
-    text-align: center;
-    img {
-      width: 70%;
-
-      @media (min-width: 1200px) {
-        width: 150%;
-        padding: 40px 40px;
-      }
-      // .background-frame {
-      //     @media (min-width:1200px) {
-      //         background-color: aqua;
-      //         border: 1px solid black;
-      //       }
-      // }
-    }
-    p {
-      font-family: $font-family-DM;
-      display: inline-block;
-      background-color: #beebff;
-      width: 70%;
-      padding: 10px;
-
-      span {
-        color: #f94d1c;
-        font-weight: 700;
-      }
-
-      @media (min-width: 1200px) {
-        position: relative;
-        bottom: 187px;
-        left: -12px;
-        background-color: #beebff;
-        padding: 13px 11px;
-        width: 90%;
-      }
-    }
-  }
-  .content {
-    margin-left: 20px;
-    h2 {
-    }
-    h3 {
-    }
-    p {
-      //   max-width: 90%;
-    }
-    a {
-      i {
-        margin-top: 10px;
-        margin-left: 10px;
-      }
-    }
-
-    .btn-video {
-      margin-left: 10px;
-      i {
-        margin: 0;
-      }
-    }
-
-    @media (min-width: 1200px) {
-      align-self: flex-start;
-      padding: 40px 40px;
-      margin-left: 90px;
-    }
+    margin-right: 95px;
   }
 }
-*/
+
 header {
   display: flex;
   background-color: #f0efe9;
