--- a/css/_chooseUs.scss
+++ b/css/_chooseUs.scss
@@ -1,10 +1,63 @@
 .choose-us {
   .container {
+    // margin-bottom: 15px;
+    .main-img-container {
+      position: relative;
+      top: 200px;
+      left: 0;
+
+      .frame-grey {
+        display: none;
+
+
+        @media (min-width: 1200px) {
+          display: block;
+          // margin: 0 auto;
+          background-color: #F0EFE9;
+          // position: relative;
+          width: 220%;
+          top: 90px;
+          left: 10px;
+          height: 250px;
+          margin-top: 120px;
+          margin-left: -20px;
+        }
+    }
+      
+
+      .main-img {
+        // width: 100%;
+        // height: auto;
+        // margin: 0 auto;
+        // position: absolute;
+        // top: 30px;
+        // left: 30px;
+ 
+        display: none;
+
+        @media (min-width: 992px) {
+          // 
+          width: 60%;
+          margin: 0 auto;
+          text-align: center;
+   
+        }
+
+        @media (min-width: 1200px) {
+          display: block;
+          position: absolute;
+          top: 30px;
+          left: 30px;
+          width: 160%;
+        }
+      }
+    }
+
     @media (min-width: 1200px) {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       grid-template-rows: auto;
-      grid-gap: 20px;
+      margin-bottom: 15px;
     }
   }
 
@@ -18,7 +71,17 @@
       @media (min-width: 1200px) {
         text-align: left;
       }
+
+      h2 {
+         
+        @media (min-width: 1200px) {
+           margin-bottom: 40px;
+          }
+      }
       h3 {
+        @media (min-width: 1200px) {
+         margin-bottom: 60px;
+        }
       }
     }
 
@@ -30,7 +93,7 @@
       }
 
       a {
-        margin-right: 30px;
+     
         margin-top: 10px;
         grid-row: 1/4;
         grid-column: 1/1;
@@ -40,11 +103,15 @@
           border: 1px solid #e7e7e7;
           padding: 10px;
         }
+        @media (min-width: 1200px) {
+          margin-right: 30px;
+         }
       }
       h4 {
         grid-row: 1;
         grid-column: 2/2;
-        text-align: start;
+        // text-align: start;
+        text-align: center;
       }
       p {
         grid-row: 2/3;
@@ -56,19 +123,5 @@
         }
       }
     }
-  }
-}
-
-.main-img {
-  width: 100%;
-  height: auto;
-  // padding: 40px;
-  margin: 0 auto;
-
-  @media (min-width: 1200px) {
-    width: 210%;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-left: 50px;
   }
 }
