--- a/css/_features.scss
+++ b/css/_features.scss
@@ -4,14 +4,16 @@
   margin-top: 50px;
   
   @media (min-width: 1200px) {
-    padding: 70px;
+    // padding: 70px;
     display: flex;
   }
   .container {
     @media (min-width: 1200px) {
       display: flex;
       margin: 0 auto;
-      border: 1px solid black;
+      border: 1px solid #E7E7E7;
+      padding: 40px 70px 70px 70px;
+     
     }
     .content {
       text-align: center;
@@ -22,7 +24,8 @@
         text-align: left;
         line-height: 1.2;
         align-items: flex-start;
-        margin-right: 100px;
+        margin-right: 60px;
+        // margin-right: 100px;
       }
       // padding: 0px;
     }
@@ -46,7 +49,7 @@
       }
       @media (min-width: 1200px) {
         // font-size: 45px;
-        max-width: 90%;
+        // max-width: 90%;
       }
     }
     a {
@@ -80,8 +83,8 @@
       }
       @media (min-width: 1200px) {
         // margin:0;
-        margin-right: 40px;
-        margin-left: 90px;
+        // margin-right: 40px;
+        // margin-left: 90px;
         padding-top: 40px;
       }
 
