--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,6 @@
 }
 @media (min-width: 1200px) {
   .features {
-    padding: 70px;
     display: flex;
   }
 }
@@ -111,7 +110,8 @@
   .features .container {
     display: flex;
     margin: 0 auto;
-    border: 1px solid black;
+    border: 1px solid #E7E7E7;
+    padding: 40px 70px 70px 70px;
   }
 }
 .features .container .content {
@@ -124,7 +124,7 @@
     text-align: left;
     line-height: 1.2;
     align-items: flex-start;
-    margin-right: 100px;
+    margin-right: 60px;
   }
 }
 .features .container h2 {
@@ -144,11 +144,6 @@
 @media (min-width: 768px) {
   .features .container h3 {
     font-size: 45px;
-  }
-}
-@media (min-width: 1200px) {
-  .features .container h3 {
-    max-width: 90%;
   }
 }
 .features .container a {
@@ -182,8 +177,6 @@
 }
 @media (min-width: 1200px) {
   .features .container .features-consulting {
-    margin-right: 40px;
-    margin-left: 90px;
     padding-top: 40px;
   }
 }
@@ -288,7 +281,7 @@
 }
 @media (min-width: 1200px) {
   .about .container .content {
-    margin-left: 95px;
+    margin-left: 35px;
   }
 }
 .about .container .founder img {
@@ -296,7 +289,7 @@
   text-align: center;
   display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .about .container .founder img {
     display: block;
   }
@@ -304,7 +297,7 @@
 .about .container .founder .background-frame {
   display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .about .container .founder .background-frame {
     display: block;
   }
@@ -346,10 +339,10 @@ header {
   padding: 15px;
 }
 header .container {
-  display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 78px;
+  display: contents;
 }
 header .container .menu-bars {
   font-size: 25px;
@@ -407,6 +400,9 @@ header .container .menu .top-menu .contact-information .content-box i {
 header .container .menu .top-menu .contact-information .content-box.last {
   border: none;
 }
+header .container .menu .top-menu .social-media a {
+  text-decoration: none;
+}
 @media (min-width: 1200px) {
   header .container .menu .top-menu .social-media {
     display: flex;
@@ -428,7 +424,6 @@ header .container .menu .main-menu {
 }
 header .container .menu .main-menu nav a {
   display: inline-block;
-  text-decoration: none;
   color: #191919;
   margin-right: 35px;
   position: relative;
@@ -477,6 +472,10 @@ header .container .btn-login {
   background-color: #ffffff;
   padding: 30px;
 }
+.services .container .content .box:hover {
+  background-color: #F9D783;
+  color: #191919;
+}
 .services .container .content .box span {
   border-top: 1px solid black;
   width: 40px;
@@ -524,6 +523,11 @@ header .container .btn-login {
   justify-content: center;
   padding: 26px 28px;
 }
+.services .container .content .box a:hover {
+  background-color: #ffffff;
+  color: #191919;
+  border: none;
+}
 .services .container .content .box a i {
   font-size: 22px;
 }
@@ -570,12 +574,51 @@ header .container .btn-login {
   margin: 0 auto;
 }
 
+.choose-us .container .main-img-container {
+  position: relative;
+  top: 200px;
+  left: 0;
+}
+.choose-us .container .main-img-container .frame-grey {
+  display: none;
+}
+@media (min-width: 1200px) {
+  .choose-us .container .main-img-container .frame-grey {
+    display: block;
+    background-color: #F0EFE9;
+    width: 220%;
+    top: 90px;
+    left: 10px;
+    height: 250px;
+    margin-top: 120px;
+    margin-left: -20px;
+  }
+}
+.choose-us .container .main-img-container .main-img {
+  display: none;
+}
+@media (min-width: 992px) {
+  .choose-us .container .main-img-container .main-img {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+@media (min-width: 1200px) {
+  .choose-us .container .main-img-container .main-img {
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 160%;
+  }
+}
 @media (min-width: 1200px) {
   .choose-us .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
-    grid-gap: 20px;
+    margin-bottom: 15px;
   }
 }
 .choose-us .content {
@@ -591,6 +634,16 @@ header .container .btn-login {
   }
 }
 @media (min-width: 1200px) {
+  .choose-us .content .headlines h2 {
+    margin-bottom: 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .choose-us .content .headlines h3 {
+    margin-bottom: 60px;
+  }
+}
+@media (min-width: 1200px) {
   .choose-us .content .box {
     display: grid;
     grid-template-columns: auto 1fr 1fr;
@@ -598,7 +651,6 @@ header .container .btn-login {
   }
 }
 .choose-us .content .box a {
-  margin-right: 30px;
   margin-top: 10px;
   grid-row: 1/4;
   grid-column: 1/1;
@@ -608,10 +660,15 @@ header .container .btn-login {
   border: 1px solid #e7e7e7;
   padding: 10px;
 }
+@media (min-width: 1200px) {
+  .choose-us .content .box a {
+    margin-right: 30px;
+  }
+}
 .choose-us .content .box h4 {
   grid-row: 1;
   grid-column: 2/2;
-  text-align: start;
+  text-align: center;
 }
 .choose-us .content .box p {
   grid-row: 2/3;
@@ -624,18 +681,99 @@ header .container .btn-login {
   }
 }
 
-.main-img {
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
+.case .container {
+  display: flex;
+  flex-direction: column;
+}
+.case .container .headlines {
+  margin-top: 130px;
+  text-align: center;
+}
+.case .container .headlines h3 {
+  margin-top: 40px;
+  margin-bottom: 100px;
+}
+.case .container .content-grid {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 @media (min-width: 1200px) {
-  .main-img {
-    width: 210%;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-left: 50px;
+  .case .container .content-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+    row-gap: 50px;
   }
+}
+.case .container .content-grid .box {
+  width: 70%;
+  margin: 0 auto;
+  border-bottom: 1px solid #E7E7E7;
+  margin-bottom: 60px;
+}
+.case .container .content-grid .box img {
+  max-width: 100%; /* Begränsa bildens bredd till förälderelementets bredd */
+  max-height: 100%; /* Begränsa bildens höjd till förälderelementets höjd */
+  width: auto;
+  height: auto;
+}
+@media (min-width: 1200px) {
+  .case .container .content-grid .box {
+    border-bottom: none;
+  }
+}
+.case .container .content-grid h4 {
+  margin-top: 70px;
+  margin-bottom: 30px;
+  text-align: left;
+}
+@media (min-width: 1200px) {
+  .case .container .content-grid h4 {
+    border-bottom: 1px solid #E7E7E7;
+  }
+}
+.case .container .content-grid a {
+  float: right;
+  text-decoration: none;
+  color: #191919;
+  font-size: 14px;
+  border: none;
+  margin-bottom: 20px;
+}
+@media (min-width: 1200px) {
+  .case .container .content-grid a {
+    margin-bottom: 10px;
+  }
+}
+.case .container .content-grid a:hover {
+  border-radius: 25px;
+  background-color: #F9D783;
+  text-transform: uppercase;
+}
+.case .container .box-1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.case .container .box-2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+.case .container .box-3 {
+  grid-column: 2/2;
+  grid-row: 2/3;
+}
+.case .container .box-4 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.case .container .btn-black {
+  margin-bottom: 30px;
+}
+.case .container .btn-black i {
+  margin-left: 10px;
 }
 
 * {
@@ -649,6 +787,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   margin: 0;
+  text-transform: capitalize;
 }
 
 .heading-red {
@@ -663,7 +802,6 @@ h2 {
   color: #F94D1C;
   font-size: 18px;
   font-family: "Inter", sans-serif;
-  text-transform: capitalize;
 }
 
 h3 {
@@ -672,7 +810,6 @@ h3 {
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 30px;
-  text-transform: capitalize;
 }
 @media (min-width: 768px) {
   h3 {
@@ -684,7 +821,6 @@ h4 {
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
   font-size: 22px;
-  text-transform: capitalize;
 }
 
 .btn-yellow {
@@ -703,7 +839,7 @@ h4 {
 }
 .btn-yellow:hover {
   background-color: #191919;
-  border: 10 px solid #191919;
+  border: 10px solid #191919;
   color: #F0EFE9;
 }
 
@@ -723,7 +859,7 @@ h4 {
 }
 .btn-transparent:hover {
   background-color: #191919;
-  border: 10 px solid #191919;
+  border: 10px solid #191919;
   color: #F0EFE9;
 }
 
@@ -742,7 +878,7 @@ h4 {
 }
 .btn-black:hover {
   background-color: #F9D783;
-  border: 10 px solid #F9D783;
+  border: 10px solid #F9D783;
   color: #191919;
 }
 
@@ -757,4 +893,9 @@ h4 {
   font-size: 16px;
   width: 50px; /* Ange den önskade bredden här */
   height: 50px;
+}
+.btn-circle:hover {
+  background-color: #191919;
+  border: 10px solid #191919;
+  color: #F0EFE9;
 }
