--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@
 @import "./header";
 @import "./services";
 @import "./chooseUs";
+@import "./case";
 
 * {
   box-sizing: border-box; // tar med border i beräkning vid sättning av storlek (borderna tar alltså inte upp 2 px extra p detta sätt)
@@ -20,6 +21,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   margin: 0;
+  text-transform: capitalize;
   // background-color: #F0EFE9;
 }
 
@@ -37,7 +39,7 @@ h2 {
   font-family: $font-family-Inter;
   // margin-bottom: 30px;
   // margin-top: 30px;
-  text-transform: capitalize;
+  // text-transform: capitalize;
 }
 
 h3 {
@@ -46,7 +48,7 @@ h3 {
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 30px;
-text-transform: capitalize;
+// text-transform: capitalize;
 
   @media (min-width: 768px) {
     font-size: 45px;
@@ -57,7 +59,7 @@ h4 {
   font-family: $font-family-DM;
   font-weight: 700;
   font-size: 22px;
-  text-transform: capitalize;
+  // text-transform: capitalize;
 }
 
 .btn-yellow {
@@ -75,7 +77,7 @@ h4 {
   }
   &:hover {
     background-color: $btn-black;
-    border: 10 px solid $btn-black;
+    border: 10px solid $btn-black;
     color: $text-color-light;
   }
 }
@@ -96,7 +98,7 @@ h4 {
   }
   &:hover {
     background-color: $btn-black;
-    border: 10 px solid $btn-black;
+    border: 10px solid $btn-black;
     color: $text-color-light;
   }
 }
@@ -116,7 +118,7 @@ h4 {
   }
   &:hover {
     background-color: $btn-yellow;
-    border: 10 px solid $btn-yellow;
+    border: 10px solid $btn-yellow;
     color: $text-color-dark;
   }
 }
@@ -132,4 +134,9 @@ h4 {
   font-size: 16px;
   width: 50px; /* Ange den önskade bredden här */
   height: 50px;
+    &:hover {
+    background-color: $btn-black;
+    border: 10px solid $btn-black;
+    color: $text-color-light;
+  }
 }
